# ate-chips

./: .ccls  .dir-locals.el  .gitignore  CMakeLists.txt  coverage.sh  main.cpp
include/: atechips.h  cpu.h  memory.h  pixel.h  rom.h  util.h  vram.h
src/: atechips.cpp  cpu.cpp  memory.cpp  pixel.cpp  rom.cpp  util.cpp  vram.cpp
test/: cpu_test.cpp  memory_test.cpp  rom_test.cpp  sanity_check_test.cpp  util_test.cpp  vram_test.cpp
